Issue #6: Remove right-align and bolding for inline labels on build pages

--- a/html/themes/custom/dc_theme/css/devel.css
+++ b/html/themes/custom/dc_theme/css/devel.css
@@ -97,7 +97,7 @@ article.dc-data-set-build-page {
 /* Alignment for inline labels. */
 article.dc-data-set-build-page .field--label-inline > .field__label {
   min-width: 12em;
-  text-align: right;
+  font-weight: normal;
 }
 
 /* Space above block labels. */
